# json-file

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
json_file/: __init__.py
tests/: test_json_file.py
